# fuzuli

./: .gitignore  .travis.yml  README.md  build-all.sh  build-interpreter.sh  build-libs.sh  clean-all.sh  clean-interpreter.sh  clean-libs.sh  fuzuli.code-workspace  release-build-all.sh  release-build-all.sh~  release-build-interpreter.sh  release-build-libs.sh  release-clean-all.sh  test.fzl
.github/workflows/: maven.yml
Core/: .cproject  .project
Core/Debug/: makefile  objects.mk
Core/Release/: eclipse-post-inst.sh  makefile  objects.mk  sources.mk
Core/nfl/: fltk.nfl  gd.nfl  gui.nfl  io.nfl  java.nfl  math.nfl  mysql.nfl  ncurses.nfl  net.nfl  string.nfl  types.nfl  utils.nfl
Core/src/: IO.cpp  Math.cpp  MySql.cpp  TclTk.cpp  fltk.cpp  fltk.h  gd.cpp  java.cpp  ncurses.cpp  net.cpp  strings.cpp  utils.cpp
Core/src_gui/: fltk.cpp  fltk.h
Fltk/: .cproject  .project
Fltk/Release/: eclipse-post-inst.sh  makefile
Fltk/nfl/: fltk.nfl
Fltk/src/: fltk.cpp  fltk.h
GD/: .cproject  .project
GD/Release/: eclipse-post-inst.sh  makefile  objects.mk
GD/nfl/: gd.nfl
GD/src/: gd.cpp
Interpreter/: .cproject  .project
Interpreter/Debug/: makefile  objects.mk  subdir.mk
Interpreter/Release/: eclipse-post-inst.sh  makefile
Interpreter/include/: FuzuliTypes.h
Interpreter/src/: AritmeticExpression.cpp  AstBuilder.cpp  BlockExpression.cpp  ByteCode.cpp  CppEmitter.cpp  DataTypeExpression.cpp  DynLoadExpression.cpp  Environment.cpp  EvalExpression.cpp  Expression.cpp  FunctionExpression.cpp  IOExpression.cpp  IfExpression.cpp  LetExpression.cpp  ListExpression.cpp  LoopsExpression.cpp  Oop.cpp  SourceCode.cpp  Timing.cpp  Token.cpp  WebExpression.cpp
JFuzuli/: .project  build.xml
JFuzuli/.metadata/: version.ini
JFuzuli/JFuzuli/: build.xml  compile.sh  rundist.sh  testio.txt
JFuzuli/JFuzuliOnlineInterpreter/: build.xml
JFuzuli/docsystem/: index.html  index.php  parser.php  style.css
JFuzuli/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Java/: .cproject  .project
Java/Debug/: makefile
Java/Release/: eclipse-post-inst.sh  makefile  objects.mk
Java/nfl/: java.nfl
Java/src/: java.cpp
Main/: .cproject  .project
Main/Debug/: makefile  objects.mk
Main/Release/: Main  eclipse-post-inst.sh  makefile  objects.mk
Main/include/: serialization.h
Main/src/: main.cpp  serialization.cpp
MySql/: .cproject  .project
MySql/Release/: eclipse-post-inst.sh  makefile
MySql/src/: MySql.cpp
NCurses/: .cproject  .project
NCurses/Release/: makefile  objects.mk
NCurses/nfl/: ncurses.nfl
RFuzuli/: 1.rlisp  RFuzuli.R
Socket/: .cproject
Socket/Release/: eclipse-post-inst.sh  makefile
Socket/nfl/: net.nfl
Socket/src/: net.cpp
Thread/: .cproject  .project
Thread/Release/: eclipse-post-inst.sh  makefile  objects.mk
Thread/nfl/: thread.nfl
Thread/src/: FuzuliRunnable.cpp  FuzuliRunnable.h  threads.cpp
cfuzuli/: .travis.yml  Makefile
cfuzuli/ftest/: arithmetic.fzl  block.fzl  break.fzl  equalints.fzl  if1.fzl  inc.fzl  lettest.fzl  list1.fzl  printtest.fzl  rm.fzl  singlelinecomment.fzl  string.fzl  typeof.fzl  while1.fzl
cfuzuli/samples/: pi.fzl
cfuzuli/src/: arraylist.c  arraylist.h  constants.h  environment.c  environment.h  eval.c  eval.h  evaltest.c  expression.c  expression.h  ferror.c  ferror.h  fmemory.c  fmemory.h  fstdarithmatic.c  fstdaritmatic.h  fstdlib.c  fstdlib.h  fstdstring.c  fstdstring.h  fuzulitypes.c  fuzulitypes.h  lexer.c  lexer.h  lexertest.c  linkedlist.c  (+14 more)
fuzuli.js/: fuzuli.js  index.html  test.html
jfuzuli/: pom.xml
lib/libsocket-1.8/: AUTHORS  ChangeLog  ROADMAP  config.h  config.h.in  config.status  configure.ac  doxygen.cfg  libtool
lib/libsocket-1.8/debian/: README.Debian  control  copyright  dirs  postinst  rules
lib/libsocket-1.8/src/: Makefile.am  localsocket.cc  netsocket.hh  socket.cc  socket.hh
lib/libsocket-1.8/src/.deps/: netsocket.Plo  socketexception.Plo  udpsocket.Plo
lib/libsocket-1.8/src/example/: Makefile  client.cc
lib/libsocket-1.8/src/tests/: Makefile  local_cp_bin.cc  local_server.cc  tcp6_server.cc  tcp_client.cc  tcp_cp.cc  tcp_cp_bin.cc  tcp_server.cc  test_cp  udp6_client.cc  udp_client.cc  udp_cp_bin.cc  udp_server.cc
lib/libsocket-1.8/src/tests/textfiles/: Artistic  BSD  GPL  LGPL  LGPL-2
oldcppversion/fuzuli/lib/libsocket-1.8/: Makefile  Makefile.am  Makefile.in  aclocal.m4  configure
oldcppversion/fuzuli/lib/libsocket-1.8/config/: Makefile  Makefile.in
oldcppversion/fuzuli/lib/libsocket-1.8/debian/: changelog  docs
oldcppversion/fuzuli/lib/libsocket-1.8/src/: Makefile  Makefile.in  localsocket.hh  netsocket.cc  socket.hxx  socketexception.cc  socketexception.hh  tcpsocket.cc  tcpsocket.hh  udpsocket.cc  udpsocket.hh
oldcppversion/fuzuli/lib/libsocket-1.8/src/.deps/: localsocket.Plo  socket.Plo  tcpsocket.Plo
oldcppversion/fuzuli/lib/libsocket-1.8/src/example/: server.cc
oldcppversion/fuzuli/lib/libsocket-1.8/src/tests/: Makefile.am  Makefile.in  local_client.cc  local_cp.cc  tcp6_client.cc  test_bind.cc  test_cp_bin  udp6_server.cc  udp_cp.cc
runtime/: Makefile  core.cpp  core.h  expression.cpp  expression.h  fuzuli  main.cpp  parser.cpp  parser.h  runtime.c  sourcecode.cpp  sourcecode.h  test.fzl  token.cpp  token.h
samples/: bigmemory.fzl  bubblesort.fzl  delta.fzl  euclidean.fzl  factorial.fzl  fibonacci.fzl  gui3.fzl  guicircles.fzl  guilines.fzl  guipaint.fzl  java.fzl  links.fzl  links.fzl~  matrix.fzl  ols.fzl  program.fzl  program.fzl.orig.orig  quicksort.fzl  strings.fzl  threads.fzl
tests/: Break.fzl  argc_argv.fzl  arithmetic.fzl  block.fzl  bubblesort.fzl  clientsocket.fzl  clone.fzl  comments.fzl  constructor.fzl  dotimes.fzl  equals.fzl~  eval.fzl  explode.fzl  expression.fzl  fastgc.fzl  fibonacci.fzl  for.fzl  for.fzl~  foreach.fzl  funcoverload.fzl  function.fzl  function.fzl~  functionsTest1.fzl~  hex.fzl  inc.fzl  inheritance.fzl  io.fzl  letTest1.fzl  list.fzl  list.fzl~  math.fzl  math.fzl~  matrix.fzl  maxmin.fzl  ols.fzl  oop.fzl  sort.fzl  strings.fzl  strings.nfl  strings.nfl~  (+9 more)
(+650 files in other folders)
