AUTOMAKE_OPTIONS = foreign 1.5

SUBDIRS = src config

EXTRA_DIST = doxygen.cfg INSTALL COPYING AUTHORS ROADMAP 	\
	     debian/README.Debian debian/compat debian/copyright\
	     debian/docs debian/postrm debian/changelog 	\
	     debian/control debian/dirs debian/postinst debian/rules\
	     ChangeLog
CLEANFILES = *~
